# FibroTwin

fibrotwin/: README.md  pyproject.toml
fibrotwin/configs/: mvp_2d_stretch.yaml
fibrotwin/docs/: 00_problem_statement.md  01_governing_equations.md  02_numerical_methods.md  03_validation_and_sanity_checks.md  04_systematic_improvement_review.md  05_validation_gap_review.md  06_emulation_history_matching_guide.md  07_validation_consistency_plan.md  08_validation_unification_plan.md  09_validation_section_inventory.md  10_quantitative_comparison_method.md
fibrotwin/outputs/: calibration_cards.json  calibration_cards.md  calibration_portfolio.json  calibration_report.json  calibration_report.md  emulation_qc.md  emulation_report.json  emulation_report.md  emulation_waves.json  emulation_waves.md  extracted_validation_checks.json  extracted_validation_checks.md  fulltext_availability_report.json  fulltext_availability_report.md  numerical_cards.json  numerical_cards.md  numerical_test_report.json  numerical_test_report.md  oa_resolution_report.json  oa_resolution_report.md  paper_harvest_report.json  paper_harvest_report.md  parameter_audit.json  parameter_audit.md  quantitative_evidence.json  quantitative_evidence.md  quantitative_match_report.json  quantitative_match_report.md  quantitative_match_strict.json  quantitative_match_strict.md  scenario_portfolio_matrix.json  scenario_portfolio_matrix.md  schema_extract_report.json  schema_extract_report.md  sensitivity_report.json  sensitivity_report.md  strict_anchor_candidates.json  strict_anchor_candidates.md  (+40 more)
(+12690 files in other folders)
